--- a/{{cookiecutter.project_slug}}/.editorconfig
+++ b/{{cookiecutter.project_slug}}/.editorconfig
@@ -10,12 +10,9 @@ insert_final_newline = true
 charset = utf-8
 end_of_line = lf
 
-[*.bat]
+# Tab indentation (no size specified)
+[Makefile]
 indent_style = tab
-end_of_line = crlf
 
 [LICENSE]
 insert_final_newline = false
-
-[Makefile]
-indent_style = tab
