--- a/{{cookiecutter.project_slug}}/tox.ini
+++ b/{{cookiecutter.project_slug}}/tox.ini
@@ -1,29 +1,56 @@
+# ======================================================================================================================
+# = Tox general settings
+# ======================================================================================================================
 [tox]
-envlist = py36, py37, py38, flake8
+minversion=2.3.1
+isolated_build = True
+envlist = py37, flake8
+skip_missing_interpreters = True
 
-[travis]
-python =
-    3.8: py38
-    3.7: py37
-    3.6: py36
-
-[testenv:flake8]
-basepython = python
-deps = flake8
-commands = flake8 {{ cookiecutter.project_slug }} tests
-
+# ======================================================================================================================
+# = The unit test test environment (unit tests and coverage)
+# ======================================================================================================================
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}
-{% if cookiecutter.use_pytest == 'y' -%}
 deps =
-    -r{toxinidir}/requirements_dev.txt
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following line:
-;     -r{toxinidir}/requirements.txt
+    pytest
+    coverage[toml]
 commands =
-    pip install -U pip
-    pytest --basetemp={envtmpdir}
-{% else %}
-commands = python setup.py test
-{%- endif %}
+    coverage run -m pytest
+    coverage combine
+    coverage report -m --fail-under=50
+
+# ======================================================================================================================
+# = The flake8 test environment (flake8 code style checker)
+# ======================================================================================================================
+[testenv:flake8]
+skip_install = true
+deps =
+    flake8
+    flake8-bugbear
+    flake8-docstrings>=1.3.1
+    flake8-typing-imports>=1.1
+    pep8-naming
+commands =
+    flake8 src/ tests/
+
+# ======================================================================================================================
+# Flake8 Configuration
+# ======================================================================================================================
+[flake8]
+ignore = D100, D104, D400
+max-line-length = 120
+exclude =
+    tests/
+    .tox,
+    .git,
+    __pycache__,
+    docs/source/conf.py,
+    build,
+    dist,
+    tests/fixtures/*,
+    *.pyc,
+    *.egg-info,
+    .cache,
+    .eggs
+max-complexity = 10
+# ======================================================================================================================
