--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -44,8 +44,11 @@ recommonmark     = "^0.7.1"
 sphinx-rtd-theme = "^1.0.0"
 
 # ==============================================================
-# = The UNIT TESTING CONFIGURATIONS                            =
+# = LINT/TEST CONFIGURATIONS                                   =
 # ==============================================================
+# ---------------------------------------------------------------
+# - Pytest configuratiosn                                       -
+# ---------------------------------------------------------------
 [tool.pytest.ini_options]
 addopts = "-ra --strict-markers"
 xfail_strict = true
@@ -54,15 +57,18 @@ filterwarnings = [
     "once::Warning",
     "ignore:::importlib[.*]",
 ]
+
+# ---------------------------------------------------------------
+# - Coverage configurations                                     -
 # ---------------------------------------------------------------
 [tool.coverage.run]
 parallel = true
 branch = true
 source = ["{{cookiecutter.project_slug}}"]
-# ---------------------------------------------------------------
+
 [tool.coverage.paths]
 source = ["src", ".tox/*/site-packages"]
-# ---------------------------------------------------------------
+
 [tool.coverage.report]
 show_missing = true
 skip_covered = false
@@ -75,6 +81,54 @@ exclude_lines = [
     ": \\.\\.\\.$",
     "^ +\\.\\.\\.$",
     "-> ['\"]?NoReturn['\"]?:",
+]
+
+# ---------------------------------------------------------------
+# - Bandit Security Screening                                   -
+# ---------------------------------------------------------------
+[tool.bandit]
+tests = []
+skips = ["B101", "B601"]
+
+[tool.bandit.any_other_function_with_shell_equals_true]
+no_shell = [
+  "os.execl",
+  "os.execle",
+  "os.execlp",
+  "os.execlpe",
+  "os.execv",
+  "os.execve",
+  "os.execvp",
+  "os.execvpe",
+  "os.spawnl",
+  "os.spawnle",
+  "os.spawnlp",
+  "os.spawnlpe",
+  "os.spawnv",
+  "os.spawnve",
+  "os.spawnvp",
+  "os.spawnvpe",
+  "os.startfile"
+]
+shell = [
+  "os.system",
+  "os.popen",
+  "os.popen2",
+  "os.popen3",
+  "os.popen4",
+  "popen2.popen2",
+  "popen2.popen3",
+  "popen2.popen4",
+  "popen2.Popen3",
+  "popen2.Popen4",
+  "commands.getoutput",
+  "commands.getstatusoutput"
+]
+subprocess = [
+  "subprocess.Popen",
+  "subprocess.call",
+  "subprocess.check_call",
+  "subprocess.check_output"
 ]
 
 # ==============================================================
