--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -39,6 +39,8 @@ pytest     = "^6.2.5"
 pytest-cov = "^3.0.0"
 coverage   = {version = ">=6.0", extras = ["toml"]}
 black      = "^21.12b0"
+pre-commit = "^2.16.0"
+bandit     = "^1.7.1"
 sphinx     = "^4.0.1"
 recommonmark     = "^0.7.1"
 sphinx-rtd-theme = "^1.0.0"
