--- a/{{cookiecutter.project_slug}}/tox.ini
+++ b/{{cookiecutter.project_slug}}/tox.ini
@@ -4,7 +4,7 @@
 [tox]
 minversion=2.3.1
 isolated_build = True
-envlist = py37, flake8
+envlist = py37, flake8, bandit
 skip_missing_interpreters = True
 
 # ======================================================================================================================
@@ -32,6 +32,15 @@ deps =
     pep8-naming
 commands =
     flake8 src/ tests/
+
+# ======================================================================================================================
+# = The bandit test environment (bandit python code security checker)
+# ======================================================================================================================
+[testenv:bandit]
+deps =
+    bandit
+commands =
+    bandit -r src
 
 # ======================================================================================================================
 # Flake8 Configuration
