--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -28,22 +28,22 @@ pylib_exec = '{{cookiecutter.project_slug}}.entry:main'
 # = PACKAGE DEPENDENCIES                                       =
 # ==============================================================
 [tool.poetry.dependencies]
-python     = ">=3.7.1"
+python     = "~3.8.13"
 
 # ==============================================================
 # = DEVELOP DEPENDENCIES                                       =
 # ==============================================================
 [tool.poetry.dev-dependencies]
 tox        = "^3.24.4"
-pytest     = "^6.2.5"
+pytest     = "^7.1.2"
 pytest-cov = "^3.0.0"
-coverage   = {version = ">=6.0", extras = ["toml"]}
-black      = "^21.12b0"
-pre-commit = "^2.16.0"
+coverage   = {version = "^6.4.0", extras = ["toml"]}
+black      = "^22.6.0"
+pre-commit = "^2.20.0"
 bandit     = "^1.7.1"
-sphinx     = "^4.0.1"
-recommonmark     = "^0.7.1"
-sphinx-rtd-theme = "^1.0.0"
+mkdocs     = "^1.3.0"
+mkdocs-material = "^8.3.9"
+mkdocstrings    = {version = "^0.19.0", extras = ["python"]}
 
 # ==============================================================
 # = LINT/TEST CONFIGURATIONS                                   =
