--- a/{{cookiecutter.project_slug}}/mkdocs.yml
+++ b/{{cookiecutter.project_slug}}/mkdocs.yml
@@ -2,52 +2,86 @@ site_name: {{cookiecutter.project_name}}
 
 # Page tree
 nav:
-  - Home:
-        - Introduction: home/intro.md
-  - Setup:
-    - PIP: setup/pip_installation.md
-  - Releases: home/intro.md
+    - Home:
+            - Introduction: home/intro.md
+    - Setup:
+            - PIP: setup/pip_installation.md
     - Changelog: releases/changelog.md
 
 theme:
-  name: material
-  features:
-      - navigation.tabs
-      - content.code.annotate
-      - content.tooltips
-      - navigation.indexes
-      - navigation.sections
-      - navigation.tabs
-      - navigation.top
-      - navigation.tracking
-      - search.highlight
-      - search.share
-      - search.suggest
-      - toc.follow
+    name: material
+    font:
+        code: Roboto Mono
+    palette:
+        # Palette toggle for light mode
+        - media: "(prefers-color-scheme: light)"
+          scheme: default
+          toggle:
+            icon: material/brightness-7
+            name: Switch to dark mode
+
+        # Palette toggle for dark mode
+        - media: "(prefers-color-scheme: dark)"
+          scheme: slate
+          toggle:
+            icon: material/brightness-4
+            name: Switch to light mode
+    features:
+        - navigation.tabs
+        - content.code.annotate
+        - content.tooltips
+        - navigation.indexes
+        - navigation.sections
+        - navigation.tabs
+        - navigation.top
+        - navigation.tracking
+        - search.highlight
+        - search.share
+        - search.suggest
+        - toc.follow
 
 plugins:
-  - search
-  - mkdocstrings
+    - search
+    - tags
+    - mkdocstrings
 
 markdown_extensions:
-  - abbr
-  - admonition
-  - attr_list
-  - def_list
-  - footnotes
-  - meta
-  - md_in_html
-  - toc:
-      permalink: true
-  - pymdownx.arithmatex:
-      generic: true
-  - pymdownx.betterem:
-      smart_enable: all
-  - pymdownx.caret
-  - pymdownx.details
-  - pymdownx.emoji
-  - pymdownx.highlight:
-      anchor_linenums: true
-  - pymdownx.inlinehilite
-  - pymdownx.keys
-
+    - abbr
+    - tables
+    - admonition
+    - attr_list
+    - def_list
+    - footnotes
+    - meta
+    - md_in_html
+    - toc:
+        permalink: true
+    - pymdownx.arithmatex:
+        generic: true
+    - pymdownx.betterem:
+        smart_enable: all
+    - pymdownx.arithmatex:
+        generic: true
+    - pymdownx.betterem:
+        smart_enable: all
+    - pymdownx.caret
+    - pymdownx.details
+    - pymdownx.emoji:
+        emoji_generator: !!python/name:materialx.emoji.to_svg
+        emoji_index: !!python/name:materialx.emoji.twemoji
+    - pymdownx.highlight:
+        anchor_linenums: true
+    - pymdownx.inlinehilite
+    - pymdownx.keys
+    - pymdownx.mark
+    - pymdownx.smartsymbols
+    - pymdownx.superfences:
+        custom_fences:
+            - name: mermaid
+            - class: mermaid
+            - format: !!python/name:pymdownx.superfences.fence_code_format
+    - pymdownx.tabbed:
+        alternate_style: true
+    - pymdownx.tasklist:
+        custom_checkbox: true
+    - pymdownx.tilde
